generated/delphiParser.java
// Generated from delphi.g4 by ANTLR 4.13.2
package generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class delphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, VAR=2, TYPE=3, CLASS=4, INTERFACE=5, PUBLIC=6, PRIVATE=7, PROTECTED=8, 
		CONSTRUCTOR=9, DESTRUCTOR=10, PROCEDURE=11, FUNCTION=12, BEGIN=13, END=14, 
		IF=15, THEN=16, ELSE=17, WHILE=18, DO=19, FOR=20, TO=21, DOWNTO=22, BREAK=23, 
		CONTINUE=24, TRUE=25, FALSE=26, MOD=27, DIV=28, INTEGER=29, REAL=30, STRING=31, 
		BOOLEAN=32, SEMI=33, COLON=34, COMMA=35, DOT=36, LPAREN=37, RPAREN=38, 
		ASSIGN=39, EQUAL=40, NOTEQUAL=41, LT=42, LE=43, GT=44, GE=45, PLUS=46, 
		MINUS=47, STAR=48, WS=49, INT_LITERAL=50, STRING_LITERAL=51, IDENTIFIER=52;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_declarations = 2, RULE_varDeclarationPart = 3, 
		RULE_varDeclaration = 4, RULE_typeDeclarationPart = 5, RULE_typeDeclaration = 6, 
		RULE_type_ = 7, RULE_baseType = 8, RULE_classDeclaration = 9, RULE_inheritanceList = 10, 
		RULE_classBody = 11, RULE_visibilitySection = 12, RULE_classMember = 13, 
		RULE_constructorDeclaration = 14, RULE_destructorDeclaration = 15, RULE_interfaceDeclaration = 16, 
		RULE_interfaceBody = 17, RULE_interfaceMember = 18, RULE_procFuncDeclaration = 19, 
		RULE_procedureDeclaration = 20, RULE_functionDeclaration = 21, RULE_formalParameters = 22, 
		RULE_formalParameter = 23, RULE_compoundStatement = 24, RULE_statementList = 25, 
		RULE_statement = 26, RULE_assignmentStatement = 27, RULE_procFuncCallStatement = 28, 
		RULE_whileStatement = 29, RULE_forStatement = 30, RULE_breakStatement = 31, 
		RULE_continueStatement = 32, RULE_ifStatement = 33, RULE_emptyStatement = 34, 
		RULE_argumentList = 35, RULE_expression = 36, RULE_relationalExpr = 37, 
		RULE_additiveExpr = 38, RULE_multiplicativeExpr = 39, RULE_unaryExpr = 40, 
		RULE_primaryExpr = 41, RULE_functionCall = 42, RULE_methodCall = 43, RULE_variableReference = 44, 
		RULE_identifierList = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "declarations", "varDeclarationPart", "varDeclaration", 
			"typeDeclarationPart", "typeDeclaration", "type_", "baseType", "classDeclaration", 
			"inheritanceList", "classBody", "visibilitySection", "classMember", "constructorDeclaration", 
			"destructorDeclaration", "interfaceDeclaration", "interfaceBody", "interfaceMember", 
			"procFuncDeclaration", "procedureDeclaration", "functionDeclaration", 
			"formalParameters", "formalParameter", "compoundStatement", "statementList", 
			"statement", "assignmentStatement", "procFuncCallStatement", "whileStatement", 
			"forStatement", "breakStatement", "continueStatement", "ifStatement", 
			"emptyStatement", "argumentList", "expression", "relationalExpr", "additiveExpr", 
			"multiplicativeExpr", "unaryExpr", "primaryExpr", "functionCall", "methodCall", 
			"variableReference", "identifierList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "'var'", "'type'", "'class'", "'interface'", "'public'", 
			"'private'", "'protected'", "'constructor'", "'destructor'", "'procedure'", 
			"'function'", "'begin'", "'end'", "'if'", "'then'", "'else'", "'while'", 
			"'do'", "'for'", "'to'", "'downto'", "'break'", "'continue'", "'true'", 
			"'false'", "'mod'", "'div'", "'integer'", "'real'", "'string'", "'boolean'", 
			"';'", "':'", "','", "'.'", "'('", "')'", "':='", "'='", "'<>'", "'<'", 
			"'<='", "'>'", "'>='", "'+'", "'-'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "VAR", "TYPE", "CLASS", "INTERFACE", "PUBLIC", "PRIVATE", 
			"PROTECTED", "CONSTRUCTOR", "DESTRUCTOR", "PROCEDURE", "FUNCTION", "BEGIN", 
			"END", "IF", "THEN", "ELSE", "WHILE", "DO", "FOR", "TO", "DOWNTO", "BREAK", 
			"CONTINUE", "TRUE", "FALSE", "MOD", "DIV", "INTEGER", "REAL", "STRING", 
			"BOOLEAN", "SEMI", "COLON", "COMMA", "DOT", "LPAREN", "RPAREN", "ASSIGN", 
			"EQUAL", "NOTEQUAL", "LT", "LE", "GT", "GE", "PLUS", "MINUS", "STAR", 
			"WS", "INT_LITERAL", "STRING_LITERAL", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public delphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(delphiParser.PROGRAM, 0); }
		public TerminalNode IDENTIFIER() { return getToken(delphiParser.IDENTIFIER, 0); }
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(delphiParser.DOT, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(PROGRAM);
			setState(93);
			match(IDENTIFIER);
			setState(94);
			match(SEMI);
			setState(95);
			block();
			setState(96);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			declarations();
			setState(99);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationsContext extends ParserRuleContext {
		public List<VarDeclarationPartContext> varDeclarationPart() {
			return getRuleContexts(VarDeclarationPartContext.class);
		}
		public VarDeclarationPartContext varDeclarationPart(int i) {
			return getRuleContext(VarDeclarationPartContext.class,i);
		}
		public List<TypeDeclarationPartContext> typeDeclarationPart() {
			return getRuleContexts(TypeDeclarationPartContext.class);
		}
		public TypeDeclarationPartContext typeDeclarationPart(int i) {
			return getRuleContext(TypeDeclarationPartContext.class,i);
		}
		public List<ProcFuncDeclarationContext> procFuncDeclaration() {
			return getRuleContexts(ProcFuncDeclarationContext.class);
		}
		public ProcFuncDeclarationContext procFuncDeclaration(int i) {
			return getRuleContext(ProcFuncDeclarationContext.class,i);
		}
		public List<TypeDeclarationContext> typeDeclaration() {
			return getRuleContexts(TypeDeclarationContext.class);
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return getRuleContext(TypeDeclarationContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4503599627376652L) != 0)) {
				{
				setState(105);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VAR:
					{
					setState(101);
					varDeclarationPart();
					}
					break;
				case TYPE:
					{
					setState(102);
					typeDeclarationPart();
					}
					break;
				case PROCEDURE:
				case FUNCTION:
					{
					setState(103);
					procFuncDeclaration();
					}
					break;
				case IDENTIFIER:
					{
					setState(104);
					typeDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclarationPartContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(delphiParser.VAR, 0); }
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(delphiParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(delphiParser.SEMI, i);
		}
		public VarDeclarationPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclarationPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterVarDeclarationPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitVarDeclarationPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitVarDeclarationPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclarationPartContext varDeclarationPart() throws RecognitionException {
		VarDeclarationPartContext _localctx = new VarDeclarationPartContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDeclarationPart);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(VAR);
			setState(114); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(111);
					varDeclaration();
					setState(112);
					match(SEMI);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(116); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclarationContext extends ParserRuleContext {
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode COLON() { return getToken(delphiParser.COLON, 0); }
		public Type_Context type_() {
			return getRuleContext(Type_Context.class,0);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitVarDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitVarDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			identifierList();
			setState(119);
			match(COLON);
			setState(120);
			type_();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDeclarationPartContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(delphiParser.TYPE, 0); }
		public List<TypeDeclarationContext> typeDeclaration() {
			return getRuleContexts(TypeDeclarationContext.class);
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return getRuleContext(TypeDeclarationContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(delphiParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(delphiParser.SEMI, i);
		}
		public TypeDeclarationPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDeclarationPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterTypeDeclarationPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitTypeDeclarationPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitTypeDeclarationPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDeclarationPartContext typeDeclarationPart() throws RecognitionException {
		TypeDeclarationPartContext _localctx = new TypeDeclarationPartContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeDeclarationPart);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(TYPE);
			setState(126); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(123);
					typeDeclaration();
					setState(124);
					match(SEMI);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(128); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDeclarationContext extends ParserRuleContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(delphiParser.IDENTIFIER, 0); }
		public TerminalNode EQUAL() { return getToken(delphiParser.EQUAL, 0); }
		public Type_Context type_() {
			return getRuleContext(Type_Context.class,0);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterTypeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitTypeDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitTypeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDeclarationContext typeDeclaration() throws RecognitionException {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typeDeclaration);
		try {
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				classDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				interfaceDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				match(IDENTIFIER);
				setState(133);
				match(EQUAL);
				setState(134);
				type_();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_Context extends ParserRuleContext {
		public BaseTypeContext baseType() {
			return getRuleContext(BaseTypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(delphiParser.IDENTIFIER, 0); }
		public Type_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterType_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitType_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitType_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_Context type_() throws RecognitionException {
		Type_Context _localctx = new Type_Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_type_);
		try {
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER:
			case REAL:
			case STRING:
			case BOOLEAN:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				baseType();
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				match(IDENTIFIER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BaseTypeContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(delphiParser.INTEGER, 0); }
		public TerminalNode REAL() { return getToken(delphiParser.REAL, 0); }
		public TerminalNode STRING() { return getToken(delphiParser.STRING, 0); }
		public TerminalNode BOOLEAN() { return getToken(delphiParser.BOOLEAN, 0); }
		public BaseTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterBaseType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitBaseType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitBaseType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BaseTypeContext baseType() throws RecognitionException {
		BaseTypeContext _localctx = new BaseTypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_baseType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 8053063680L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
